--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -48,11 +48,13 @@
 .hero-btn {
   margin-top: 1rem;
   padding: 0.75rem 2.25rem;
-  line-height: 1;
+  line-height: 1.5em;
+  height: 48px;
 
   &.btn-github {
     text-transform: none;
     font-size: 1rem;
+    line-height: 1em;
     
     svg {
       width: 2em;
